dh-summary/mutants.out.old/log/src__lib.rs_line_74_col_5.log

*** src/lib.rs:74:5: replace summarize -> DatasetSummary with Default::default()

*** mutation diff:
--- src/lib.rs
+++ replace summarize -> DatasetSummary with Default::default()
@@ -66,39 +66,17 @@
 ///
 /// # Panics
 ///
 /// Panics if `cfg.max_bytes` is so small that even the zero-sample summary
 /// (no rows at all) cannot fit.  In practice 1 KiB is always sufficient for
 /// the header + stats.
 #[must_use]
 pub fn summarize(dataset: &Dataset, cfg: &SummaryCfg) -> DatasetSummary {
-    let row_count = dataset.row_count() as u64;
-
-    // ── Build per-column stats ────────────────────────────────────────────
-    let stats = compute_stats(dataset, cfg.topk);
-
-    // ── Build head/tail sample ────────────────────────────────────────────
-    let sample = build_sample(dataset, cfg.sample_cap);
-
-    // ── Generate deterministic notes ──────────────────────────────────────
-    let mut notes = generate_notes(dataset, &stats);
-
-    // ── Assemble summary (respects sample_cap via DatasetSummary::new) ───
-    let summary = DatasetSummary::new(
-        row_count,
-        dataset.columns.clone(),
-        sample,
-        cfg.sample_cap,
-        stats,
-        notes.clone(),
-    );
-
-    // ── Hard max_bytes self-check: truncate sample if needed ──────────────
-    enforce_max_bytes(summary, row_count, cfg, &mut notes)
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 /// Advertise which operations make sense for this dataset's shape.
 ///
 /// Rules:
 /// * `Pivot` requires ≥2 dimension columns.
 /// * All other capabilities are always advertised.
 #[must_use]


*** /Users/jsy/.rustup/toolchains/1.85.0-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=dh-summary@0.1.0
       Fresh unicode-ident v1.0.24
       Fresh memchr v2.8.1
       Fresh itoa v1.0.18
       Fresh proc-macro2 v1.0.106
       Fresh cfg-if v1.0.4
       Fresh dyn-clone v1.0.20
       Fresh quote v1.0.45
       Fresh serde_core v1.0.228
       Fresh zmij v1.0.21
       Fresh libc v0.2.186
       Fresh syn v2.0.117
       Fresh serde_json v1.0.150
       Fresh getrandom v0.4.2
       Fresh serde_derive_internals v0.29.1
       Fresh serde_derive v1.0.228
       Fresh uuid v1.23.2
       Fresh schemars_derive v0.8.22
       Fresh serde v1.0.228
       Fresh schemars v0.8.22
       Fresh dh-spec v0.1.0 (/Users/jsy/Documents/projects/dh-spec)
       Fresh dh-store v0.1.0 (/Users/jsy/Documents/projects/dh-store)
       Dirty dh-summary v0.1.0 (/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp): the file `src/lib.rs` has changed (1780953588.097304885s, 4s after last build at 1780953584.241474846s)
   Compiling dh-summary v0.1.0 (/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp)
     Running `/Users/jsy/.rustup/toolchains/1.85.0-aarch64-apple-darwin/bin/rustc --crate-name dh_summary --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=78d698b9a149721f -C extra-filename=-bd59e07e1bc4c303 --out-dir /private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps -C incremental=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/incremental -L dependency=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps --extern dh_spec=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps/libdh_spec-fa2ae146e2e0d5cb.rmeta --extern dh_store=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps/libdh_store-b5128db5421edc74.rmeta --extern serde_json=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps/libserde_json-3fe3499550b3ea1e.rmeta`
     Running `/Users/jsy/.rustup/toolchains/1.85.0-aarch64-apple-darwin/bin/rustc --crate-name dh_summary --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=343947f4240e2b9c -C extra-filename=-5243533f63ef4209 --out-dir /private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps -C incremental=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/incremental -L dependency=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps --extern dh_spec=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps/libdh_spec-fa2ae146e2e0d5cb.rlib --extern dh_store=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps/libdh_store-b5128db5421edc74.rlib --extern serde_json=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps/libserde_json-3fe3499550b3ea1e.rlib`
error[E0277]: the trait bound `DatasetSummary: Default` is not satisfied
  --> src/lib.rs:74:5
   |
74 |     Default::default() /* ~ changed by cargo-mutants ~ */
   |     ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `DatasetSummary`

error[E0277]: the trait bound `dh_spec::DatasetSummary: Default` is not satisfied
  --> src/lib.rs:74:5
   |
74 |     Default::default() /* ~ changed by cargo-mutants ~ */
   |     ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `dh_spec::DatasetSummary`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `dh-summary` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/jsy/.rustup/toolchains/1.85.0-aarch64-apple-darwin/bin/rustc --crate-name dh_summary --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=78d698b9a149721f -C extra-filename=-bd59e07e1bc4c303 --out-dir /private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps -C incremental=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/incremental -L dependency=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps --extern dh_spec=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps/libdh_spec-fa2ae146e2e0d5cb.rmeta --extern dh_store=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps/libdh_store-b5128db5421edc74.rmeta --extern serde_json=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps/libserde_json-3fe3499550b3ea1e.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `dh-summary` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/jsy/.rustup/toolchains/1.85.0-aarch64-apple-darwin/bin/rustc --crate-name dh_summary --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=343947f4240e2b9c -C extra-filename=-5243533f63ef4209 --out-dir /private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps -C incremental=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/incremental -L dependency=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps --extern dh_spec=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps/libdh_spec-fa2ae146e2e0d5cb.rlib --extern dh_store=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps/libdh_store-b5128db5421edc74.rlib --extern serde_json=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-CIVCVI.tmp/target/debug/deps/libserde_json-3fe3499550b3ea1e.rlib` (exit status: 1)

*** result: Failure(101)
